# et-hackathon

./: .env.example  .gitignore  ArchitecturePrinciples.md  DECISIONS.md  Dockerfile  Makefile  PRD.md  README.md  TDD.md  compose.prod.yaml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  pyproject.toml
backend/app/: config.py  main.py  obs.py
backend/app/api/: assets.py  config.py  deps.py  dossiers.py  events.py  health.py  limiter.py  memory.py  ops.py  schemas.py  service.py  sources.py  trace_cost.py
backend/app/context/: assembler.py  evidence.py
backend/app/db/: engine.py  models.py
backend/app/domain/: models.py  routine_closure_patterns.yaml  routine_guard.py  symptom_map.py  symptom_map.yaml
backend/app/evals/: gate_persist.py  persist.py  runner.py
backend/app/llm/: __init__.py  client.py  embeddings.py  fallback_cache.py
backend/app/memory/: __init__.py  candidates.py  effective_mode.py
backend/app/middleware/: __init__.py  access_gate.py
backend/app/reasoning/: graph.py  post_check.py  (+2 more)
backend/tests/: conftest.py  test_access_gate.py  test_assembler_determinism.py  test_cache_control.py  test_chunker.py  test_dossier_runs.py  test_e2e_deterministic.py  test_effective_mode.py  test_embedder.py  test_eval_runner.py  test_evidence_strength.py  test_health.py  test_lexical_channel.py  test_llm_reasoning.py  test_memory.py  test_normalizer.py  test_ops.py  test_rate_limit.py  test_reasoning_unit.py  test_repositories_no_raw_failure_mode.py  test_routine_guard.py  test_schema.py  test_seed_verification.py  test_summary.py  test_trace_cost.py  test_truth_isolation.py
(+141 files in other folders)
