[project]
name = "oce-backend"
version = "0.1.0"
description = "Operational Context Engine — backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2",
    "pydantic-settings>=2",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    # seed.py loads the design yaml via dataset/generators/catalogue.py, so
    # pyyaml is a runtime (not just dataset-tooling) dependency.
    "pyyaml>=6",
    "numpy>=2",
    "pypdf>=4",
    "pypdfium2>=4",
    "pytesseract>=0.3",
    "sentence-transformers>=3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "mypy>=1.13",
]
# Dataset generators (`make dataset`) — pure Python, no system deps.
dataset = [
    "fpdf2>=2.8",
    "pyyaml>=6",
    "pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "sentence_transformers.*", "pypdfium2.*", "pytesseract.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: loads the local embedding model (deselect with '-m \"not slow\"')",
]
